--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -1,5 +1,11 @@
 .main {
   height: 100vh;
-  width: 100%;
+  width: 88%;
+  margin-left: 5%;
+  background-color: #fff;
+  margin-top: 20px;
   border: none;
+  -webkit-box-shadow: 12px 22px 25px -20px rgba(17, 17, 17, 0.71);
+  -moz-box-shadow: 12px 22px 25px -20px rgba(17, 17, 17, 0.71);
+  box-shadow: 12px 22px 25px -20px rgba(17, 17, 17, 0.71);
 }
