--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,11 @@
 .wrap {
   width: 100%;
-  height: 100px;
+  height: 120px;
+  position: relative;
+  z-index: 100;
+  -webkit-box-shadow: 0px 10px 28px -17px rgba(17, 17, 17, 0.49);
+  -moz-box-shadow: 0px 10px 28px -17px rgba(17, 17, 17, 0.49);
+  box-shadow: 0px 10px 28px -17px rgba(17, 17, 17, 0.49);
 }
 
 .title {
