--- a/src/components/toolbar/toolbar.css
+++ b/src/components/toolbar/toolbar.css
@@ -1,5 +1,12 @@
 .toolbar-wrap {
   height: 50px;
   border-bottom: 0.5px solid #ccc;
+  border-top: 0.5px solid #ccc;
   width: 100%;
+  position: relative;
+  z-index: 1;
+  -webkit-box-shadow: 0px 14px 25px -20px rgba(17, 17, 17, 0.71);
+  -moz-box-shadow: 0px 14px 25px -20px rgba(17, 17, 17, 0.71);
+  box-shadow: 0px 14px 25px -20px rgba(17, 17, 17, 0.71);
+  padding-bottom: 10px;
 }
